# weather-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-05-spec-swell-separation.md
docs/superpowers/specs/: 2026-06-05-adopt-vs-keep-and-spec-waves-design.md
src/weather_mcp/: cache.py  client.py  fetch.py  netutil.py  quota.py  server.py  tools.py
src/weather_mcp/providers/: ndbc.py  openmeteo.py  signalk.py  stormglass.py
tests/: test_cache.py  test_client.py  test_fetch.py  test_netutil.py  test_provider_ndbc.py  test_provider_openmeteo.py  test_provider_signalk.py  test_provider_stormglass.py  test_quota.py  test_server.py  test_tools_buoy.py
