[project]
name = "weather-mcp"
version = "0.2.2"
description = "MCP server exposing marine wind, swell, and buoy observations as agent tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Bryan Clark", email = "clarkbw@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.1",
    "marine-forecast>=0.1.0",
    "naturali-mcp-netutil>=0.1.0",
]

[tool.uv.sources]
marine-forecast = { git = "https://github.com/sailingnaturali/marine-forecast", tag = "v0.1.0" }
naturali-mcp-netutil = { git = "https://github.com/sailingnaturali/naturali-mcp-netutil", tag = "v0.1.0" }

[project.scripts]
weather-mcp = "weather_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
